# python-calculator

./: setup.cfg
pythoncalculator/: __init__.py  add.py
tests/: test_multiply.py
